# llm_eval

./: .gitignore  README.md  generate_id-19671892.out  inspect_results.py  main.py  main.sh  pyproject.toml  requirements.txt  run_benchmark.py  test.py  vis.ipynb
MongoDB/: Test.py  Test_retrieve.py  mongodb_install.sh  run_test_mongo.sh
analysis/: Week5 Analysis  retrieve_results_mongodb.py
configs/: benchmark.json  bm-demo.json  eval-demo.json  eval.json  poc-llama7b-base-triviaqa.json  poc-llama7b-base.json  poc-llama7b-chat.json  poc-llama7b-llmevalulator.json
configs/benchmarks/: final_all_models_400_samples.json  final_all_models_base.json  final_all_models_chat.json  nq_fewshot1.json
data/: TriviaQA_Judges_w_HumanJudgement_V1.csv
demo/: eval_info.json  eval_run.py  inspect_results.py
demo/demo/: benchmark_info.json  benchmark_run.py  eval_info.json  eval_run.py
encryption/: __init__.py  encryptor.py  read_secrets.py  write_secrets.py
model_output/: generate_id-19389931.out  generate_model_output.py  response.txt  retrieve_model_output.py  run_generate_model_output.sh  run_test.sh  target.txt  test.py  test_mmlu.py
results/: TriviaQA_Judges_w_HumanJudgement_V2.csv
src/benchmark/: __init__.py  base_benchmark.py  mmlu.py  naturalquestions.py  nq.py  triviaqa.py
src/database/: __init__.py  base_database.py  dummy_mongodb.py  json_database.py  mongodb.py  mongodb_database.py  mongodb_test.py
src/evaluator/: __init__.py  base_evaluator.py  classic_evaluator.py  hf_evaluator.py  human_evaluator.py  llm_evaluator.py
test/: test_truncation_logic.py
(+105 files in other folders)
