[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "llm_eval"
version = "1.4.1"
dependencies = [
  "numpy",
  "torch",
  "transformers",
  "accelerate",
  "datasets",
  "pymongo",
  "termcolor",
  "evaluate",
  "openai",
  "anthropic",
  "sentencepiece",
  "bert_score",
  "overrides"
]
authors = [
  { name="Kartik Choudhary", email="kartikchoudh@umass.edu" },
  { name="Aman Singh Thakur", email="amansinghtha@umass.edu" },
  { name="Venkat Srinik Ramayapally", email="vramayapally@umass.edu" }
]
description = "Evaluation suite for LLMs on Core-Knowledge benchmarks"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.urls]
"Homepage" = "https://github.com/UMass-Meta-LLM-Eval/llm_eval"
"Bug Tracker" = "https://github.com/UMass-Meta-LLM-Eval/llm_eval/issues"
